Created two new LaTeX commands for improving the layout of Python code in the relax manual.
These are \pysep and \pyus which will be used to format the Python module separator character and
the Python underscore character respectively.  They are used in the \module{}, \pycode{}, etc.
commands to add the '.\linebreak[0]' and '\_\linebreak[0]' text to allow for improved and consistent
line breaking.

--- a/docs/latex/develop.tex
+++ b/docs/latex/develop.tex
@@ -654,7 +654,7 @@ Each of the boxes in Figure~\ref{fig: core design} represents a different groupi
 
 \item[Generic code:]  This code includes classes and functions which are independent of the UI and not specific to a certain data pipe type, for example not being involved in model-free analysis, relaxation curve-fitting, the NOE calculation, and reduced spectral density mapping.  All this code is located in the directory \directory{pipe\osus{}control\ossep{}}.
 
-\item[Specific setup:]  This code implements the internal interface between the generic and specific code.  The generic code calls the specific setup asking for a specific function for the given data pipe type.  For example by asking for the minimise function when the data pipe type is model-free analysis the model-free specific \module{minimise()} method is returned.  Although the generic code accesses the specific code solely through this interface the specific code can access the generic code directly.  The code is located in the file \file{specific\osus{}fns\ossep{}specific\osus{}setup.py}.
+\item[Specific setup:]  This code implements the internal interface between the generic and specific code.  The generic code calls the specific setup asking for a specific function for the given data pipe type.  For example by asking for the minimise function when the data pipe type is model-free analysis the model-free specific \pycode{minimise()} method is returned.  Although the generic code accesses the specific code solely through this interface the specific code can access the generic code directly.  The code is located in the file \file{specific\osus{}fns\ossep{}specific\osus{}setup.py}.
 
 \item[Specific code:]  This is the code which is specific to the data pipe type -- model-free analysis, relaxation curve-fitting, reduced spectral density mapping, and the NOE calculation.  Each type is located in a separate file in the directory \directory{specific\osus{}fns\ossep{}}.
 
