--- a/docs/latex/model-free.tex
+++ b/docs/latex/model-free.tex
@@ -1312,7 +1312,7 @@ If your system does not experience CSA relaxation, the value can be set to zero.
 %~~~~~~~~~~~
 \subsection{d'Auvergne protocol script mode -- execution}
 
-Once the data is set up and you have modified your script to match your analysis needs, then the data pipe, pipe bundle and analysis variables are passed into the \module{dAuvergne\linebreak[0]{}\_protocol} class.  This is the final line of the script:
+Once the data is set up and you have modified your script to match your analysis needs, then the data pipe, pipe bundle and analysis variables are passed into the \module{dAuvergne\pyus{}protocol} class.  This is the final line of the script:
 
 \begin{lstlisting}[firstnumber=203]
 # Execution.
