--- a/docs/latex/relax.tex
+++ b/docs/latex/relax.tex
@@ -98,7 +98,9 @@
 \newcommand{\ossep}{/\linebreak[0]}
 \newcommand{\osus}{\_\linebreak[0]}
 \newcommand{\pycode}[1]{{\small \texttt{#1}}}
+\newcommand{\pysep}{.\linebreak[0]}
 \newcommand{\pystring}[1]{`{\small \texttt{#1}}'}
+\newcommand{\pyus}{\_\linebreak[0]}
 \newcommand{\software}[1]{\texttt{#1}}
 \newcommand{\no}{-}
 \newcommand{\yes}{\checkmark}
