Complete reformatting of the base LaTeX files.
The paragraph structure has been changed so that each sentence now starts on a new line.  This is
for better tracking of changes (via 'svn diff' for example), for better searchability of certain
text elements using command line tools such as 'grep', and for easier easier use of the 'sed' tool.
The change tracking is most important as it allows for finer granularity - a small change will now
only be shown as a change in one sentence rather than the whole paragraph, allowing the change to be
identified more easily.  It also allows for easier commit maintenance.

--- a/docs/latex/citations.tex
+++ b/docs/latex/citations.tex
@@ -81,7 +81,8 @@ If the automated analysis of the \file{dauvergne\osus{}protocol.py} sample scrip
 \item \bibentry{dAuvergneGooley08b}
 \end{itemize}
 
-Otherwise, if model-free analysis is used in relax but not via the inbuilt automated protocol, the first reference is for model selection, the second is for eliminating failed model-free models, and the forth is for the optimisation improvements (the third and fifth are for the automated protocol).  All of the model-free implementation details of relax are covered by the PhD thesis (available as a PDF or as a printed version on Amazon.com) of:
+Otherwise, if model-free analysis is used in relax but not via the inbuilt automated protocol, the first reference is for model selection, the second is for eliminating failed model-free models, and the forth is for the optimisation improvements (the third and fifth are for the automated protocol).
+All of the model-free implementation details of relax are covered by the PhD thesis (available as a PDF or as a printed version on Amazon.com) of:
 
 \begin{itemize}
 \item \bibentry{dAuvergne06}
@@ -120,7 +121,8 @@ The base citations for the consistency testing of NMR relaxation is:
 \item \bibentry{Fushman98}
 \end{itemize}
 
-The first is the main citation, whereas the next are the individual tests.  The citation for the consistency testing of NMR relaxation as implemented in relax is:
+The first is the main citation, whereas the next are the individual tests.
+The citation for the consistency testing of NMR relaxation as implemented in relax is:
 
 \begin{itemize}
 \item \bibentry{MorinGagne09a}
@@ -158,7 +160,8 @@ The base citations for reduced spectral density mapping are:
 
 \subsection*{Relaxation dispersion references}
 
-For the base citations for relaxation dispersion, please see chapter~\ref{ch: relax-disp} on page~\pageref{ch: relax-disp} for a listing of the individual models.  The main citation is:
+For the base citations for relaxation dispersion, please see chapter~\ref{ch: relax-disp} on page~\pageref{ch: relax-disp} for a listing of the individual models.
+The main citation is:
 
 \begin{itemize}
 \item \bibentry{Morin14}
