--- a/docs/latex/licence.tex
+++ b/docs/latex/licence.tex
@@ -11,7 +11,11 @@
 \index{GPL|textbf}
 \index{licence|textbf}
 
-To ensure that the program relax, including all future versions, will remain legally available for perpetuity to anyone who wishes to use the program the code has been released under the GNU General Public Licence.  The freedom of relax is guaranteed by the GPL.  This is a licence which has been very carefully crafted to protect both the developers of the program as well as the users by means of copyright law.  If the licence is violated by improper copying, modification, sublicencing, or distribution then the licence terminates -- hence the violator is copying, modifying, sublicencing, or distributing the program illegally in full violation of copyright law.  For a better understanding of the protections afforded by the GPL the licence is reprinted in whole within the next section.
+To ensure that the program relax, including all future versions, will remain legally available for perpetuity to anyone who wishes to use the program the code has been released under the GNU General Public Licence.
+The freedom of relax is guaranteed by the GPL.
+This is a licence which has been very carefully crafted to protect both the developers of the program as well as the users by means of copyright law.
+If the licence is violated by improper copying, modification, sublicencing, or distribution then the licence terminates -- hence the violator is copying, modifying, sublicencing, or distributing the program illegally in full violation of copyright law.
+For a better understanding of the protections afforded by the GPL the licence is reprinted in whole within the next section.
 
 
 % The GPL.
@@ -21,7 +25,8 @@ To ensure that the program relax, including all future versions, will remain leg
 \section{The GPL}
 \index{GPL|textbf}
 
-The following is a verbatim copy of the GNU General Public Licence.  A text version is available in the relax `docs' directory within the file `COPYING'.
+The following is a verbatim copy of the GNU General Public Licence.
+A text version is available in the relax `docs' directory within the file `COPYING'.
 
 
 % Start a new page.
