--- a/docs/latex/data_model.tex
+++ b/docs/latex/data_model.tex
@@ -9,7 +9,9 @@
 
 \section{The concept of the relax data model}
 
-To begin to understand how to use relax, a basic comprehension of the relax data model is needed.  The data model includes the concepts of the relax data store, the data pipes, the molecule, residue and spin data structures and the interatomic data containers.  These concepts are independent of the specific analyses presented in the next chapters and are important for setting up relax.
+To begin to understand how to use relax, a basic comprehension of the relax data model is needed.
+The data model includes the concepts of the relax data store, the data pipes, the molecule, residue and spin data structures and the interatomic data containers.
+These concepts are independent of the specific analyses presented in the next chapters and are important for setting up relax.
 
 
 
@@ -24,7 +26,9 @@ To begin to understand how to use relax, a basic comprehension of the relax data
 
 \subsection{The relax data store}
 
-All permanent data handled by relax is kept in a structure known as the relax data store.  This structure is initialised when relax is launched.  The data store is primarily organised into a series of objects known as data pipes, and all usage of relax revolves around the flow of information in these data pipes.
+All permanent data handled by relax is kept in a structure known as the relax data store.
+This structure is initialised when relax is launched.
+The data store is primarily organised into a series of objects known as data pipes, and all usage of relax revolves around the flow of information in these data pipes.
 
 
 % Data pipes.
@@ -34,15 +38,24 @@ All permanent data handled by relax is kept in a structure known as the relax da
 \includegraphics[width=3cm, bb=0 0 1701 1701]{graphics/misc/pipe_600x600}
 \end{figure*}
 
-The first thing one must do when relax is launched is to create a data pipe.  When using the GUI, a base data pipe will be created when opening one of the automatic analyses via the analysis selection window (see figure~\ref{fig: screenshot: analysis wizard} on page~\pageref{fig: screenshot: analysis wizard}).  This will also create a data pipe bundle for the analysis (\textit{vide infra}).  Alternatively the data pipe editor window can be used to create data pipes (see figure~\ref{fig: screenshot: pipe editor} on page~\pageref{fig: screenshot: pipe editor}).  For the prompt/scripting modes, or the \guimenuitemthree{User functions}{pipe}{create} menu entry, a data pipe can be initialised by specifying the unique name of the data pipe and the data pipe type:
+The first thing one must do when relax is launched is to create a data pipe.
+When using the GUI, a base data pipe will be created when opening one of the automatic analyses via the analysis selection window (see figure~\ref{fig: screenshot: analysis wizard} on page~\pageref{fig: screenshot: analysis wizard}).
+This will also create a data pipe bundle for the analysis (\textit{vide infra}).
+Alternatively the data pipe editor window can be used to create data pipes (see figure~\ref{fig: screenshot: pipe editor} on page~\pageref{fig: screenshot: pipe editor}).
+For the prompt/scripting modes, or the \guimenuitemthree{User functions}{pipe}{create} menu entry, a data pipe can be initialised by specifying the unique name of the data pipe and the data pipe type:
 
 \begin{lstlisting}
 pipe.create(pipe_name='NOE 1200 MHz', pipe_type='noe')
 \end{lstlisting}
 
-A number of relax operations will also create data pipes by merging a group of pipes or branching pre-existing pipes.  See section~\ref{sect: the data pipe} on page~\pageref{sect: the data pipe} for additional details.
+A number of relax operations will also create data pipes by merging a group of pipes or branching pre-existing pipes.
+See section~\ref{sect: the data pipe} on page~\pageref{sect: the data pipe} for additional details.
 
-All data not associated with spin systems will be stored in the base data pipe.  This includes information such as global optimisation statistics, diffusion tensors, alignment tensors, 3D structural data, the molecule, residue and spin container data structure and the interatomic data containers.  One data pipe from the set will be defined as being the current data pipe, and all operations in relax will effect data from this pipe.  The \uf{pipe\ufsep{}switch} user function in all UI modes can be used to change which pipe is the current data pipe.  In the GUI, switching between analysis tabs will automatically switch the current data pipe to match the analysis being displayed.
+All data not associated with spin systems will be stored in the base data pipe.
+This includes information such as global optimisation statistics, diffusion tensors, alignment tensors, 3D structural data, the molecule, residue and spin container data structure and the interatomic data containers.
+One data pipe from the set will be defined as being the current data pipe, and all operations in relax will effect data from this pipe.
+The \uf{pipe\ufsep{}switch} user function in all UI modes can be used to change which pipe is the current data pipe.
+In the GUI, switching between analysis tabs will automatically switch the current data pipe to match the analysis being displayed.
 
 
 % Data pipe bundles.
@@ -52,7 +65,8 @@ All data not associated with spin systems will be stored in the base data pipe. 
 \includegraphics[width=3cm, bb=0 0 1701 1701]{graphics/misc/pipe_bundle_600x600}
 \end{figure*}
 
-Related data pipes can be grouped into a `bundle'.  For example if the data pipes ``sphere'', ``oblate spheroid'', ``prolate spheroid'', and ``ellipsoid'' preexist, these can be grouped into a bundle called ``diffusion tensors'' with the following series of user function calls:
+Related data pipes can be grouped into a `bundle'.
+For example if the data pipes ``sphere'', ``oblate spheroid'', ``prolate spheroid'', and ``ellipsoid'' preexist, these can be grouped into a bundle called ``diffusion tensors'' with the following series of user function calls:
 
 \begin{lstlisting}
 pipe.bundle(bundle='diffusion tensors', pipe='sphere')
@@ -70,7 +84,10 @@ The data pipe editor window of the GUI can also be used to bundle pipes together
 
 \subsection{Molecule, residue, and spin containers}
 
-Within a data pipe is the molecule, residue, and spin container data structure.  Data which is specific to a given nucleus is stored in a special spin container structure.  This includes relaxation data, model-free parameters, reduced spectral density mapping values, spin specific optimisation parameters, chemical shift tensor information, pseudo-contact shift values, etc.  The spin containers can be created from 3D structural data or a sequence file, as described in the next two sections, or manually built.
+Within a data pipe is the molecule, residue, and spin container data structure.
+Data which is specific to a given nucleus is stored in a special spin container structure.
+This includes relaxation data, model-free parameters, reduced spectral density mapping values, spin specific optimisation parameters, chemical shift tensor information, pseudo-contact shift values, etc.
+The spin containers can be created from 3D structural data or a sequence file, as described in the next two sections, or manually built.
 
 
 
@@ -81,13 +98,17 @@ Within a data pipe is the molecule, residue, and spin container data structure. 
 \includegraphics[width=3cm, bb=0 0 1701 1701]{graphics/misc/molecule_600x600}
 \end{figure*}
 
-The spin containers are part of a nested set of containers, and are graphically depicted in the spin viewer window of the GUI in figure~\ref{fig: screenshot: spin viewer} on page~\pageref{fig: screenshot: spin viewer}.  As can be seen from the figure, the top level holds a single molecular container.  Multiple molecular containers can be present if the study is of a molecular complex.  Using the GUI menus or the prompt/scripting mode, molecule containers can be manually created with the user function:
+The spin containers are part of a nested set of containers, and are graphically depicted in the spin viewer window of the GUI in figure~\ref{fig: screenshot: spin viewer} on page~\pageref{fig: screenshot: spin viewer}.
+As can be seen from the figure, the top level holds a single molecular container.
+Multiple molecular containers can be present if the study is of a molecular complex.
+Using the GUI menus or the prompt/scripting mode, molecule containers can be manually created with the user function:
 
 \begin{lstlisting}
 molecule.create(mol_name='glycerol', mol_type='organic molecule')
 \end{lstlisting}
 
-In the spin viewer window of the GUI, right clicking on the \gui{Spin system information} element will pop up a menu with an entry for adding molecule containers.  Right clicking on molecule containers will show a pop up menu with an entry for permanently deleting the container.
+In the spin viewer window of the GUI, right clicking on the \gui{Spin system information} element will pop up a menu with an entry for adding molecule containers.
+Right clicking on molecule containers will show a pop up menu with an entry for permanently deleting the container.
 
 
 
@@ -98,7 +119,12 @@ In the spin viewer window of the GUI, right clicking on the \gui{Spin system inf
 \includegraphics[width=3cm, bb=0 0 1701 1701]{graphics/misc/residue_600x600}
 \end{figure*}
 
-Nested within the molecule containers are residue containers.  These are graphically depicted in the spin viewer window (see figure~\ref{fig: screenshot: spin viewer} on page~\pageref{fig: screenshot: spin viewer}).  Each molecule container can possess multiple residues.  These require either a unique residue number or unique residue name.  For organic molecules where the residue concept is meaningless, all spin containers can be held within a single unnamed and unnumbered residue container.  Using the GUI menus or the prompt/scripting mode, residue containers can be manually created with the user function:
+Nested within the molecule containers are residue containers.
+These are graphically depicted in the spin viewer window (see figure~\ref{fig: screenshot: spin viewer} on page~\pageref{fig: screenshot: spin viewer}).
+Each molecule container can possess multiple residues.
+These require either a unique residue number or unique residue name.
+For organic molecules where the residue concept is meaningless, all spin containers can be held within a single unnamed and unnumbered residue container.
+Using the GUI menus or the prompt/scripting mode, residue containers can be manually created with the user function:
 
 \begin{lstlisting}
 residue.create(res_num='-5', res_name='ASP')
@@ -116,7 +142,10 @@ Alternatively residues can be added in the spin viewer window from the pop up me
 \includegraphics[width=3cm, bb=0 0 1701 1701]{graphics/misc/spin_600x600}
 \end{figure*}
 
-Spin containers are nested within a residue container (again graphically depicted in the spin viewer window in figure~\ref{fig: screenshot: spin viewer} on page~\pageref{fig: screenshot: spin viewer}).  Multiple spin containers can exist per residue.  This allows, for example, a single model-free analysis simultaneously on the backbone nitrogen spins, side-chain tryptophan indole nitrogen spins and alpha carbon spins.  Or, for example, studying the pseudocontact shifts for all nitrogen, carbon and proton spins in the molecule simultaneously.
+Spin containers are nested within a residue container (again graphically depicted in the spin viewer window in figure~\ref{fig: screenshot: spin viewer} on page~\pageref{fig: screenshot: spin viewer}).
+Multiple spin containers can exist per residue.
+This allows, for example, a single model-free analysis simultaneously on the backbone nitrogen spins, side-chain tryptophan indole nitrogen spins and alpha carbon spins.
+Or, for example, studying the pseudocontact shifts for all nitrogen, carbon and proton spins in the molecule simultaneously.
 
 Spin containers can be manually added via the \uf{spin\ufsep{}create} user function in the GUI or prompt/scripting mode:
 
@@ -131,7 +160,9 @@ The spin viewer window can also be used by right clicking on residue containers.
 % Spin ID strings.
 \subsubsection{Spin ID strings} \label{sect: spin ID}
 
-Spins are often identified in relax using their ID strings.  The spin ID strings follow the basic construct found in a number of other NMR software such as MOLMOL.  The identification string is composed of three components:
+Spins are often identified in relax using their ID strings.
+The spin ID strings follow the basic construct found in a number of other NMR software such as MOLMOL.
+The identification string is composed of three components:
 
 \begin{itemize}
 \item The molecule ID token beginning with the \promptstring{\#} character,
@@ -139,11 +170,16 @@ Spins are often identified in relax using their ID strings.  The spin ID strings
 \item The atom or spin system ID token beginning with the \promptstring{@} character.
 \end{itemize}
 
-Each token can be composed of multiple elements -- one per spin -- separated by the \promptstring{,} character and each individual element can either be a number (which must be an integer, in string format), a name, or a range of numbers separated by the \promptstring{-} character.  Negative numbers are supported.  The full ID string specification is \promptstring{\#<mol\_name> :<res\_id>[, <res\_id>[, <res\_id>, ...]] @<atom\_id>[, <atom\_id>[, <atom\_id>, ...]]}, where the token elements are \promptstring{<mol\_name>}, the name of the molecule, \promptstring{<res\_id>}, the residue identifier which can be a number, name, or range of numbers, \promptstring{<atom\_id>}, the atom or spin system identifier which can be a number, name, or range of numbers.
+Each token can be composed of multiple elements -- one per spin -- separated by the \promptstring{,} character and each individual element can either be a number (which must be an integer, in string format), a name, or a range of numbers separated by the \promptstring{-} character.
+Negative numbers are supported.
+The full ID string specification is \promptstring{\#<mol\_name> :<res\_id>[, <res\_id>[, <res\_id>, ...]] @<atom\_id>[, <atom\_id>[, <atom\_id>, ...]]}, where the token elements are \promptstring{<mol\_name>}, the name of the molecule, \promptstring{<res\_id>}, the residue identifier which can be a number, name, or range of numbers, \promptstring{<atom\_id>}, the atom or spin system identifier which can be a number, name, or range of numbers.
 
-If one of the tokens is left out then all elements will be assumed to match.  For example if the string does not contain the \promptstring{\#} character then all molecules will match the string.  If only the molecule ID component is specified, then all spins of the molecule will match.
+If one of the tokens is left out then all elements will be assumed to match.
+For example if the string does not contain the \promptstring{\#} character then all molecules will match the string.
+If only the molecule ID component is specified, then all spins of the molecule will match.
 
-Regular expression can, in some instances, be used to select spins.  For example the string \promptstring{@H*} will select the protons `H', `H2' and `H98'.
+Regular expression can, in some instances, be used to select spins.
+For example the string \promptstring{@H*} will select the protons `H', `H2' and `H98'.
 
 
 
@@ -156,7 +192,11 @@ Regular expression can, in some instances, be used to select spins.  For example
 \includegraphics[width=3cm, bb=0 0 1701 1701]{graphics/wizards/dipole_pair/NH_dipole_pair_600x600}
 \end{figure*}
 
-Separate from the spin containers, yet strongly linked to them, are the interatomic data containers.  These containers are grouped together within the same data pipe as the spins they point to.  These define interactions between two spins located anywhere within the molecule, residue and spin nested data structure.  These are automatically created when reading in data defined between two spins such as RDCs and NOE distance constraints.  They can also be created using the \uf{interatom\ufsep{}define} user function:
+Separate from the spin containers, yet strongly linked to them, are the interatomic data containers.
+These containers are grouped together within the same data pipe as the spins they point to.
+These define interactions between two spins located anywhere within the molecule, residue and spin nested data structure.
+These are automatically created when reading in data defined between two spins such as RDCs and NOE distance constraints.
+They can also be created using the \uf{interatom\ufsep{}define} user function:
 
 \begin{lstlisting}
 interatom.define(spin_id1=':2@N', spin_id2=':2@H')
@@ -183,7 +223,10 @@ Below are three different examples showing how to set up the relax data model fo
 \includegraphics[width=3cm, bb=0 0 1701 1701]{graphics/misc/n_state_model/phthalic_acid_ens_600x600}
 \end{figure*}
 
-3D structural data is stored at the level of the current data pipe.  This data is completely separate from the molecule, residue and spin data structure.  However the structural data can be used to generate the spin containers.  For example for the nitrogen relaxation in a model-free analysis where both the nitrogen and proton are needed to define the magnetic dipole-dipole relaxation:
+3D structural data is stored at the level of the current data pipe.
+This data is completely separate from the molecule, residue and spin data structure.
+However the structural data can be used to generate the spin containers.
+For example for the nitrogen relaxation in a model-free analysis where both the nitrogen and proton are needed to define the magnetic dipole-dipole relaxation:
 
 \begin{lstlisting}
 # Create a data pipe.
@@ -205,9 +248,12 @@ spin.isotope('15N', spin_id='@N*')
 spin.isotope('1H', spin_id='@H*')
 \end{lstlisting}
 
-The \uf{structure\ufsep{}read\ufus{}pdb} user function will load the structural data into the current data pipe, and the \uf{structure\ufsep{}load\ufus{}spins} user function will create the molecule, residue, and spin containers as needed.  This will also load atomic position information into the matching spin containers.  The \uf{spin\ufsep{}isotope} user function is required to define the magnetic dipole-dipole interaction and is information not present in the PDB file.
+The \uf{structure\ufsep{}read\ufus{}pdb} user function will load the structural data into the current data pipe, and the \uf{structure\ufsep{}load\ufus{}spins} user function will create the molecule, residue, and spin containers as needed.
+This will also load atomic position information into the matching spin containers.
+The \uf{spin\ufsep{}isotope} user function is required to define the magnetic dipole-dipole interaction and is information not present in the PDB file.
 
-Note that if structural data from the PDB is used to generate the spin containers, then all subsequent data loaded into relax must follow the exact naming convention from the PDB file.  Automatic residue name matching (i.e. `GLY' = `Gly' = `gly' = `G') is currently not supported.
+Note that if structural data from the PDB is used to generate the spin containers, then all subsequent data loaded into relax must follow the exact naming convention from the PDB file.
+Automatic residue name matching (i.e. `GLY' = `Gly' = `gly' = `G') is currently not supported.
 
 
 
@@ -220,7 +266,10 @@ Note that if structural data from the PDB is used to generate the spin container
 \includegraphics[width=3cm, bb=0 0 1701 1701]{graphics/misc/sequence_600x600}
 \end{figure*}
 
-Alternatively to setting up the molecule, residue, and spin containers via 3D structural data, a plain text columnar formatted file can be used.  This is useful for when no 3D structure exists for the molecule.  It also has the advantage that the residue and atom names need not conform to the PDB standard.  An example for reading sequence data is:
+Alternatively to setting up the molecule, residue, and spin containers via 3D structural data, a plain text columnar formatted file can be used.
+This is useful for when no 3D structure exists for the molecule.
+It also has the advantage that the residue and atom names need not conform to the PDB standard.
+An example for reading sequence data is:
 
 \begin{lstlisting}
 # Create a data pipe.
@@ -249,7 +298,11 @@ Ap4Aase_new_3_mol1  40       TRP       685       N          0.65394813490548  0.
 Ap4Aase_new_3_mol1  40       TRP       698       NE1        0.67073879732046  0.01426066343831    
 \end{verbatim}} \label{verb: noe.500.out}
 
-The file can contain columns for the molecule name, the residue name and number, and the spin name and number in any order though not all are needed.  For example for a single protein system, the molecule name, residue name and spin number are nonessential.  Or for an organic molecule, the molecule name, residue name and number and spin number could be nonessential.  The subsequent user functions in the above example are used to set up the spin containers appropriately for a model-free analysis.  These are not required in the automatic analysis of GUI as these user functions will be presented to you when adding relaxation data, or when clicking on the heteronucleus and proton buttons (\guibutton{X isotope} and \guibutton{H isotope}).
+The file can contain columns for the molecule name, the residue name and number, and the spin name and number in any order though not all are needed.
+For example for a single protein system, the molecule name, residue name and spin number are nonessential.
+Or for an organic molecule, the molecule name, residue name and number and spin number could be nonessential.
+The subsequent user functions in the above example are used to set up the spin containers appropriately for a model-free analysis.
+These are not required in the automatic analysis of GUI as these user functions will be presented to you when adding relaxation data, or when clicking on the heteronucleus and proton buttons (\guibutton{X isotope} and \guibutton{H isotope}).
 
 In the GUI, the creation of molecule, residue, and spin containers from a sequence file is also available via the \gui{Load spins} wizard within the spin viewer window (\textit{vide supra}).
 
@@ -259,7 +312,8 @@ In the GUI, the creation of molecule, residue, and spin containers from a sequen
 
 \subsection{Script mode -- manual construction} \label{sect: script - manual construction}
 
-For the masochists out there, the full molecule, residue and spin data structure can be manually constructed.  For example:
+For the masochists out there, the full molecule, residue and spin data structure can be manually constructed.
+For example:
 
 \begin{lstlisting}
 # Manually create the molecule, residue, and spin containers.
@@ -288,7 +342,10 @@ These user functions can be repeated until the full sequence has been constructe
 
 \subsection{GUI mode -- setting up the data pipe} \label{sect: GUI - data pipe}
 
-In the GUI, the most common way to create the data pipe is to initialise one of the auto-analyses via the analysis selection wizard (see Figure~\ref{fig: screenshot: analysis wizard} on page~\pageref{fig: screenshot: analysis wizard}).  The initialisation will create the appropriate starting data pipe.  Alternatively the data pipe editor can be used (see Figure~\ref{fig: screenshot: pipe editor} on page~\pageref{fig: screenshot: pipe editor}).  Or the \guimenuitemthree{User functions}{pipe}{create} menu item can be selected for graphical access to the \uf{pipe\ufsep{}create} user function.
+In the GUI, the most common way to create the data pipe is to initialise one of the auto-analyses via the analysis selection wizard (see Figure~\ref{fig: screenshot: analysis wizard} on page~\pageref{fig: screenshot: analysis wizard}).
+The initialisation will create the appropriate starting data pipe.
+Alternatively the data pipe editor can be used (see Figure~\ref{fig: screenshot: pipe editor} on page~\pageref{fig: screenshot: pipe editor}).
+Or the \guimenuitemthree{User functions}{pipe}{create} menu item can be selected for graphical access to the \uf{pipe\ufsep{}create} user function.
 
 
 
@@ -297,7 +354,9 @@ In the GUI, the most common way to create the data pipe is to initialise one of 
 
 \subsection{GUI mode -- spins from structural data} \label{sect: GUI - structural data}
 
-For this section, the example of protein $^{15}$N relaxation data will be used to illustrate how to set up the data structures.  To manipulate the molecule, residue and spin data structures in the GUI, the most convenient option is to use the spin viewer window (see Figure~\ref{fig: screenshot: spin viewer} on page~\pageref{fig: screenshot: spin viewer}).  This window can be opened in four ways:
+For this section, the example of protein $^{15}$N relaxation data will be used to illustrate how to set up the data structures.
+To manipulate the molecule, residue and spin data structures in the GUI, the most convenient option is to use the spin viewer window (see Figure~\ref{fig: screenshot: spin viewer} on page~\pageref{fig: screenshot: spin viewer}).
+This window can be opened in four ways:
 
 \begin{itemize}
 \item The \guimenuitemtwo{View}{Spin viewer} menu item,
@@ -313,33 +372,48 @@ You will then see:
 \label{figure: spin viewer blank}
 \end{minipage}
 
-At this point, click on the \guibutton{Load spins} button (or the \guimenuitemone{Load spins} menu entry from the right click pop up menu) to launch the spin loading wizard.  A number of options will be presented to you: 
+At this point, click on the \guibutton{Load spins} button (or the \guimenuitemone{Load spins} menu entry from the right click pop up menu) to launch the spin loading wizard.
+A number of options will be presented to you: 
 
 \begin{minipage}[h]{\linewidth}
 \centerline{\includegraphics[width=0.8\textwidth, bb=14 14 1415 1019]{graphics/screenshots/spin_viewer/wizard_start}}
 \label{figure: spin viewer wizard start}
 \end{minipage}
 
-Here the spins will be loaded from a PDB file.  If you do not have a 3D structure file, please see the next section.  After selecting \gui{From a new PDB structure file} and clicking on \guibutton{Next}, you will see:
+Here the spins will be loaded from a PDB file.
+If you do not have a 3D structure file, please see the next section.
+After selecting \gui{From a new PDB structure file} and clicking on \guibutton{Next}, you will see:
 
 \begin{minipage}[h]{\linewidth}
 \centerline{\includegraphics[width=0.8\textwidth, bb=14 14 1415 1019]{graphics/screenshots/spin_viewer/wizard_read_pdb}}
 \end{minipage}
 
-Now select the PDB file you wish to use.  The other options in this screen allow you to handle NMR models and multiple molecules within a single PDB file.  These options are explained in the window.  Hovering the mouse over the options will give additional hints.  In this example, the \nth{3} model from the 1F3Y PDB file will be read and the single molecule will be named \guistring{Ap4Aase} to override the default naming of \guistring{1f3y\_mol1}.  Now click on \guibutton{Next} to bring up the spin loading page:
+Now select the PDB file you wish to use.
+The other options in this screen allow you to handle NMR models and multiple molecules within a single PDB file.
+These options are explained in the window.
+Hovering the mouse over the options will give additional hints.
+In this example, the \nth{3} model from the 1F3Y PDB file will be read and the single molecule will be named \guistring{Ap4Aase} to override the default naming of \guistring{1f3y\_mol1}.
+Now click on \guibutton{Next} to bring up the spin loading page:
 
 \begin{minipage}[h]{\linewidth}
 \centerline{\includegraphics[width=0.8\textwidth, bb=14 14 1415 1019]{graphics/screenshots/spin_viewer/wizard_load_spins_n}}
 \end{minipage}
 
-This is a bit more complicated.  In this example we are studying the backbone dynamics of $^{15}$N spins of a protein.  Therefore first set the spin ID string to \guistring{@N} (which can be selected from the pull down) and click on \guibutton{Apply} to set up the backbone spins.  Do not click on \guibutton{Next} yet.  If the current study requires the specification of the dipole-dipole interaction (for example if it involves relaxation data -- model-free analyses, consistency testing, reduced spectral density mapping; or the dipolar coupling -- the N-state model or ensemble analyses, the Frame Order theory) you will also need to load the $^1$H spins as well.  Therefore set the spin ID string to \guistring{@H} and click on \guibutton{Apply} again.
+This is a bit more complicated.
+In this example we are studying the backbone dynamics of $^{15}$N spins of a protein.
+Therefore first set the spin ID string to \guistring{@N} (which can be selected from the pull down) and click on \guibutton{Apply} to set up the backbone spins.
+Do not click on \guibutton{Next} yet.
+If the current study requires the specification of the dipole-dipole interaction (for example if it involves relaxation data -- model-free analyses, consistency testing, reduced spectral density mapping; or the dipolar coupling -- the N-state model or ensemble analyses, the Frame Order theory) you will also need to load the $^1$H spins as well.
+Therefore set the spin ID string to \guistring{@H} and click on \guibutton{Apply} again.
 
 
 \begin{minipage}[h]{\linewidth}
 \centerline{\includegraphics[width=0.8\textwidth, bb=14 14 1415 1019]{graphics/screenshots/spin_viewer/wizard_load_spins_ne1}}
 \end{minipage}
 
-Now change the spin ID string to \guistring{@NE1} and then click on \guibutton{Next} (or \guibutton{Apply} if the Trp protons \guistring{@HE1} need to be loaded as well).  This will add spin containers for the tryptophan indole $^{15}$N spins.  Finally click on \guibutton{Finish} to exit the wizard:
+Now change the spin ID string to \guistring{@NE1} and then click on \guibutton{Next} (or \guibutton{Apply} if the Trp protons \guistring{@HE1} need to be loaded as well).
+This will add spin containers for the tryptophan indole $^{15}$N spins.
+Finally click on \guibutton{Finish} to exit the wizard:
 
 \begin{minipage}[h]{\linewidth}
 \centerline{\includegraphics[width=0.8\textwidth, bb=14 14 1415 1019]{graphics/screenshots/spin_viewer/wizard_end}}
@@ -360,13 +434,19 @@ If the $^1$H spins have been loaded as well, then you should see exactly twice a
 
 \subsection{GUI mode -- spins from a sequence file} \label{sect: GUI - sequence file}
 
-Starting from the empty spin viewer window on page~\pageref{figure: spin viewer blank}), click on the \guibutton{Load spins} button.  You will then see the spin loading wizard (see page~\pageref{figure: spin viewer wizard start}).  Select the option for reading data from a sequence file.  You should then see:
+Starting from the empty spin viewer window on page~\pageref{figure: spin viewer blank}), click on the \guibutton{Load spins} button.
+You will then see the spin loading wizard (see page~\pageref{figure: spin viewer wizard start}).
+Select the option for reading data from a sequence file.
+You should then see:
 
 \begin{minipage}[h]{\linewidth}
 \centerline{\includegraphics[width=0.8\textwidth, bb=14 14 1415 1019]{graphics/screenshots/spin_viewer/wizard_sequence}}
 \end{minipage}
 
-Select the file to load and change the \gui{Free format file settings} as needed.  An example of a suitable format is given on page~\pageref{verb: noe.500.out}.  Click on \guibutton{Next} to reach the wizard ending page (see~\pageref{figure: spin viewer end}).  Finally click on \guibutton{Finish} to exit the wizard.
+Select the file to load and change the \gui{Free format file settings} as needed.
+An example of a suitable format is given on page~\pageref{verb: noe.500.out}.
+Click on \guibutton{Next} to reach the wizard ending page (see~\pageref{figure: spin viewer end}).
+Finally click on \guibutton{Finish} to exit the wizard.
 
 
 % Manual construction.
@@ -374,7 +454,9 @@ Select the file to load and change the \gui{Free format file settings} as needed
 
 \subsection{GUI mode -- manual construction} \label{sect: GUI - manual construction}
 
-Just as in the prompt/script UI mode, the molecules, residues and spins can be manually added.  First add a molecule by right clicking on the \gui{Spin system information} element and selecting the relevant entry in the popup menu.  Then right click on the newly created molecule container to add residues, and right click on residue containers to add spins.
+Just as in the prompt/script UI mode, the molecules, residues and spins can be manually added.
+First add a molecule by right clicking on the \gui{Spin system information} element and selecting the relevant entry in the popup menu.
+Then right click on the newly created molecule container to add residues, and right click on residue containers to add spins.
 
 
 % Deselect spins.
@@ -394,7 +476,8 @@ Select the file listing the unresolved spins and change the column numbers in th
 \centerline{\includegraphics[width=0.8\textwidth, bb=14 14 1415 1019]{graphics/screenshots/noe_analysis/deselect}}
 \end{minipage}
 
-Alternatively the spin editor window can be reopened and the spins manually deselected by right clicking on them and selecting \gui{Deselect}.  Returning to the spin editor window, you should now see certain spins coloured grey:
+Alternatively the spin editor window can be reopened and the spins manually deselected by right clicking on them and selecting \gui{Deselect}.
+Returning to the spin editor window, you should now see certain spins coloured grey:
 
 \begin{minipage}[h]{\linewidth}
 \centerline{\includegraphics[width=0.8\textwidth, bb=14 14 1415 1019]{graphics/screenshots/spin_viewer/deselect}}
@@ -407,4 +490,5 @@ Alternatively the spin editor window can be reopened and the spins manually dese
 
 \section{The next steps}
 
-This chapter presented the basics of setting up the relax data store, concepts which are needed for all analysis types built into relax.  The next chapters will introduce specific analyses types -- the steady-state NOE, $\Rone$ and $\Rtwo$ relaxation curve-fitting, and the automated full model-free analysis protocol of \citet{dAuvergneGooley07,dAuvergneGooley08b} -- which build on the ideas introduced here.
+This chapter presented the basics of setting up the relax data store, concepts which are needed for all analysis types built into relax.
+The next chapters will introduce specific analyses types -- the steady-state NOE, $\Rone$ and $\Rtwo$ relaxation curve-fitting, and the automated full model-free analysis protocol of \citet{dAuvergneGooley07,dAuvergneGooley08b} -- which build on the ideas introduced here.
