--- a/docs/latex/jw_mapping.tex
+++ b/docs/latex/jw_mapping.tex
@@ -9,9 +9,13 @@
 
 \section{Introduction to reduced spectral density mapping}
 
-The reduced spectral density mapping analysis is often performed when the system under study is not suitable for model-free analysis, or as a last resort if a model-free analysis fails.  The aim is to convert the relaxation data into three $J(\omega)$ values for the given field strength.  Interpretation of this data, although slightly less convoluted than the relaxation data, is still plagued by problems related to non-spherical diffusion and much care must be taken when making conclusions.  A full understanding of the model-free analysis and the effect of diffusion tensor anisotropy and rhombicity allows for better interpretation of the raw numbers.
+The reduced spectral density mapping analysis is often performed when the system under study is not suitable for model-free analysis, or as a last resort if a model-free analysis fails.
+The aim is to convert the relaxation data into three $J(\omega)$ values for the given field strength.
+Interpretation of this data, although slightly less convoluted than the relaxation data, is still plagued by problems related to non-spherical diffusion and much care must be taken when making conclusions.
+A full understanding of the model-free analysis and the effect of diffusion tensor anisotropy and rhombicity allows for better interpretation of the raw numbers.
 
-To understand how reduced spectral density mapping is implemented in relax, the sample script will be worked through.  This analysis type is not implemented in the GUI yet, though it shouldn't be too hard if anyone would like to contribute this and have a reference added to Chapter~\ref{ch: citations}, the citations chapter.
+To understand how reduced spectral density mapping is implemented in relax, the sample script will be worked through.
+This analysis type is not implemented in the GUI yet, though it shouldn't be too hard if anyone would like to contribute this and have a reference added to Chapter~\ref{ch: citations}, the citations chapter.
 
 
 % The sample script.
@@ -86,7 +90,8 @@ state.save('save', force=True)
 
 \section{J(w) mapping script mode -- data pipe and spin system setup}
 
-The steps for setting up relax and the data model concept are described in full detail in Chapter~\ref{ch: data model}.  The first step, as for all analyses in relax, is to create a data pipe for storing all the data:
+The steps for setting up relax and the data model concept are described in full detail in Chapter~\ref{ch: data model}.
+The first step, as for all analyses in relax, is to create a data pipe for storing all the data:
 
 \begin{lstlisting}[firstnumber=4]
 # Create the data pipe.
@@ -119,7 +124,9 @@ This is needed to define the magnetic dipole-dipole interaction which governs re
 
 \section{J(w) mapping script mode -- relaxation data loading}
 
-The loading of relaxation data is straight forward.  This is performed prior to the creation of the proton spins so that the data is loaded only into the $^{15}$N spin containers and not both spins for each residue.  Only data for a single field strength can be loaded:
+The loading of relaxation data is straight forward.
+This is performed prior to the creation of the proton spins so that the data is loaded only into the $^{15}$N spin containers and not both spins for each residue.
+Only data for a single field strength can be loaded:
 
 \begin{lstlisting}[firstnumber=13]
 # Load the 15N relaxation data.
@@ -142,7 +149,8 @@ jw_mapping.set_frq(frq=600.0 * 1e6)
 
 \section{J(w) mapping script mode -- relaxation interactions}
 
-Prior to calculating the $J(\omega)$ values, the physical interactions which govern relaxation of the spins must be defined.  For the magnetic dipole-dipole relaxation interaction, the user functions are:
+Prior to calculating the $J(\omega)$ values, the physical interactions which govern relaxation of the spins must be defined.
+For the magnetic dipole-dipole relaxation interaction, the user functions are:
 
 \begin{lstlisting}[firstnumber=21]
 # Define the magnetic dipole-dipole relaxation interaction.
@@ -164,14 +172,18 @@ value.set(val=-172 * 1e-6, param='csa')
 
 \section{J(w) mapping script mode -- calculation and error propagation}
 
-Optimisation for this analysis is not needed as this is a direct calculation.  Therefore the $J(\omega)$ values are simply calculated with the call:
+Optimisation for this analysis is not needed as this is a direct calculation.
+Therefore the $J(\omega)$ values are simply calculated with the call:
 
 \begin{lstlisting}[firstnumber=31]
 # Reduced spectral density mapping.
 calc()
 \end{lstlisting}
 
-The propagation of errors is more complicated.  The Monte Carlo simulation framework of relax can be used to propagate the relaxation data errors to the spectral density errors.  As this is a direct calculation, this collapses into the standard bootstrapping method.  The normal Monte Carlo user functions can be called:
+The propagation of errors is more complicated.
+The Monte Carlo simulation framework of relax can be used to propagate the relaxation data errors to the spectral density errors.
+As this is a direct calculation, this collapses into the standard bootstrapping method.
+The normal Monte Carlo user functions can be called:
 
 \begin{lstlisting}[firstnumber=34]
 # Monte Carlo simulations (well, bootstrapping as this is a calculation and not a fit!).
